[metadata]
name = removestar
author = Aaron Meurer
author_email = asmeurer@gmail.com
license = MIT
description = A tool to automatically replace 'import *' imports with explicit imports in files
url = https://www.asmeurer.com/removestar/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source Code = https://github.com/asmeurer/removestar
    Bug Tracker = https://github.com/asmeurer/removestar/issues

[options]
packages = find:
install_requires = pyflakes
python_requires = >=3.6

[options.entry_points]
console_scripts = removestar = removestar.__main__:main

[versioneer]
VCS = git
style = pep440
versionfile_source = removestar/_version.py
versionfile_build = removestar/_version.py
tag_prefix =
parentdir_prefix =
